# platml

./: .gitignore  README.md  research_paper.md  run_local.sh
api/: .dockerignore  Cargo.toml  Dockerfile  api-deploy.yaml
api/src/: main.rs
api/src/models/: mod.rs
api/src/storage/: gcs.rs  local.rs  mod.rs
deployment/: api-deploy.yaml  frontend-deploy.yaml  ns.yaml  pvc-storage.yaml  serve-deploy.yaml  storage-class.yaml
frontend/: .dockerignore  Dockerfile  nginx.conf  nginx.conf.template  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  config.js
frontend/src/components/: ModelList.js  ModelRegistration.js  ModelServing.js  ModelUpload.js  Prediction.js
serve/: Cargo.toml  Dockerfile
serve/src/: main.rs
