[package]
name = "ml-platform-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
cloud-storage = "0.11"
tempfile = "3.3"