[package]
name = "serve"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
cloud-storage = "0.11"
anyhow = "1.0"
tempfile = "3.3"
tower-http = { version = "0.5", features = ["cors"] }
